syntax = "proto3";
package freym.projections.delivery;
import "projections/delivery/shared.proto";

message GetViewDataRequest {
	string view = 1;
	AuthData auth = 2;
	DataFilter filter = 3;
	bool use_strong_consistency = 4;
	int64 deployment_id = 5;
}

message GetViewDataResponse {
	Data result = 1;
}

message GetViewDataListRequest {
	string view = 1;
	AuthData auth = 2;
	int64 limit = 3;
	int64 page = 4;
	DataFilter filter = 5;
	repeated DataOrder order = 6;
	bool use_strong_consistency = 7;
	int64 deployment_id = 8;
}

message GetViewDataListResponse {
	repeated Data result = 1;
	int64 limit = 2;
	int64 page = 3;
	int64 total = 4;
}
